@@ -13,14 +13,14 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, see <http://www.gnu.org/licenses/>.
 #
-# Copyright (C) 2016-2020 Dominik Kriegner <dominik.kriegner@gmail.com>
+# Copyright (C) 2016-2025 Dominik Kriegner <dominik.kriegner@gmail.com>
 
 import unittest
 
 import numpy
 import xrayutilities as xu
 
-digits = 9
+digits = 7
 
 
 class TestPeakFit(unittest.TestCase):
