@@ -1,3 +1,4 @@
+* avoid use of scipy.misc package. make xrayutilities work with scipy>=1.15 (#202)
 * fix typo in GetStress method of Material/Crystal.
 * improve wording in Experiment class docstrings (#192)
 * fix typo in cache key of atomic structure factor (#189)
